As an app developer, I want to be able to UPDATE Customers
